--- a/src/app/verify-kyc/verify/verify.component.html
+++ b/src/app/verify-kyc/verify/verify.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+    <div class="alert alert-success" *ngIf="success !== null">
+      {{success}}
+    </div>
+    <div class="alert alert-danger" *ngIf="error !== null">
+      {{error}}
+    </div>
     <form [formGroup]="regulatorBody">
       <div class="form-group row">
         <div class="col">
@@ -94,9 +100,12 @@
           <textarea class="form-control" formControlName="notes"></textarea>
         </div>
       </div>
-      <div class="form-group row">
-        <button mat-button (click)="verifyKYC('APPROVED')" [disabled]="!regulatorBody.valid">Approve</button>
-        <button mat-button (click)="verifyKYC('REJECTED')" [disabled]="!regulatorBody.valid">Reject</button>
+      <div class="form-group row" align="center">
+        <div class="col">
+            <button class="btn btn-primary" (click)="verifyKYC('APPROVED')" [disabled]="!regulatorBody.valid" *ngIf="!submitted">Approve</button> &nbsp;
+            <button class="btn btn-primary" (click)="verifyKYC('REJECTED')" [disabled]="!regulatorBody.valid" *ngIf="!submitted">Reject</button>
+            <button class="btn btn-primary" (click)="__dialogRef.close(submitted)" *ngIf="submitted">OK</button>
+        </div>
       </div>
     </form>
   </div>
